# fitz-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
fitz_utils/: ProcessedDoc.py  ProcessedPage.py  __init__.py  processed_doc.py  processed_page.py
fitz_utils/tests/: ProcessedPage_test.py
requirements/: environment.yaml  requirements.txt
tests/: test_doc.py  test_page.py
