[tool.poetry]
name = "fitz-utils"
version = "0.0.17"
description = "Extra functions for use with pymupdf module"
authors = ["The Walnut AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.1"
pandas = "^2.1.1"
pymupdf = "^1.20.0"
ftfy = "^6.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.5.0"


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
